--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
 
     <script src="https://unpkg.com/navigo@6"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+
+    <!-- FireStore / Authentication -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+
     <script src="./assets/js/index.js" type="module"></script>
 </body>
 
