--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
 
     <!-- Chance -->
-    <script src="http://chancejs.com/chance.min.js"></script>
+    <script src="https://chancejs.com/chance.min.js"></script>
 
     <script src="./assets/js/index.js" type="module"></script>
 </body>
